--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   rflutter_alert: ^2.0.2
+  font_awesome_flutter: ^9.1.0
 #  audioplayers: ^0.18.1
 
 dev_dependencies:
