--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   rflutter_alert: ^2.0.2
   font_awesome_flutter: ^9.1.0
-#  audioplayers: ^0.18.1
+  geolocator: ^7.2.0+1
+  http: ^0.13.3
+  flutter_spinkit: ^5.0.0
+# audioplayers: ^0.18.1
 
 dev_dependencies:
   flutter_test:
