--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   geolocator: ^7.2.0+1
   http: ^0.13.3
   flutter_spinkit: ^5.0.0
+  google_fonts: ^2.1.0
+  curved_navigation_bar: ^1.0.1
 # audioplayers: ^0.18.1
 
 dev_dependencies:
